--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css">
-    <script defer src="./src/index.js"></script>
+    <script defer src="../src/index.js"></script>
     <title>Validation-test</title>
 </head>
 <body>
+
+<div class="container">
+    <div class="header">
+        <h1>Регистрация</h1>
+    </div>
+    <form id="form" class="form">
+        <div class="form">
+            <label for="username">ФИО</label>
+            <input type="text" placeholder="Иванов Иван Иванович" id="username"/>
+        </div>
+        <div class="form">
+            <label for="email">Email</label>
+            <input type="email" placeholder="ivanov.ivan@gmail.com" id="email"/>
+        </div>
+        <div class="form">
+            <label for="phone">Телефон</label>
+            <input type="phone" placeholder="+79994445566" id="phone"/>
+        </div>
+
+        <button>Отправить</button>
+    </form>
+</div>
 
 </body>
 </html>
