copy-past replacers added + simple tests

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <form id="form" class="form">
         <div class="form">
             <label for="username">ФИО</label>
-            <input type="text" placeholder="Иванов Иван Иванович" id="username"/>
+            <input type="text" placeholder="Иванов Иван Иванович" id="username" contenteditable='true' />
         </div>
         <div class="form">
             <label for="email">Email</label>
